@@ -1,3 +1,6 @@
 # The last byte C4 has been removed. This means that the dll crcs will not check out.
 # Since the simulation will not remove the crcs unless they all check out, this will result in a broken telegram.
 telegram=|3444EE4D813929271608|811D|7A51000000|046D1912A62B036E000000|5170426CE1F1436E00000002FF2C00000259D6D0D4090265FC0902FD66A00044|
+
+
+telegram=|a944c5149564252200047a10009025a8431d8Bee683c2471d99f2B943e739f39aff1a257d056cBB97d6Ba1ce2a85c01455Bef04a0BB199582803174de070957378350c6419c5Bf499Bf8e089390B4aB4f610c0BB334ad2B810994Be18fcf0d8B12a3BBB3e8cBe90009df3d7cfc8B62d89923e1a0d207BBdd4B453491a00d3942fe1B8d0d03492ad8cce69c8968B157d6f25ad1a541aafB0787aae06d6c9Bf903f903fd0c05010002fd0B|
